--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
   </main>
-  <div class="attribution">
+  <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
     <p>Coded by <a href="https://www.frontendmentor.io/profile/adrianh42">Adrian Hartanto</a>.</p>
   </div>
